5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1671_1103.log
== TEST (2019-04-23 13:08:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertenc ao intervalo",a",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 9
    print("Entradas",a"e",b,"invalidas")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:08:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertenc ao intervalo",a",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 11
    print("x pertenc ao intervalo",a",",b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a",",b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a",",b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,","b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 11
    print("x pertence ao intervalo",a,","b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,", "b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 11
    print("x pertence ao intervalo",a,", "b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,", ",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a",",b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:09:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,", ",b,)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a",",b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:10:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a",",b)
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:10:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a.",",b)
-- ERROR:
File "XXXX", line 13
    print("x nao pertence ao inetrvalo",a.",",b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:11:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print("x pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print("x nao pertence ao inetrvalo",a,",",b)
-- OUTPUT:
x nao pertence ao inetrvalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:11:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao inetrvalo",a,",",b)
-- OUTPUT:
2.0  nao pertence ao inetrvalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:11:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao inetrvalo",a,",",b)
-- EXECUTION TIME:
0.149575
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao inetrvalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:11:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao inetrvalo",a,",",b)
-- OUTPUT:
2.0  nao pertence ao inetrvalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:12:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao inetrvalo",a,",",b)
-- OUTPUT:
2.0  nao pertence ao inetrvalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:12:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao inetrvalo",a,",",b)
-- OUTPUT:
2.0  nao pertence ao inetrvalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 13:13:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("x: "))
a= float(input("a: "))
b= float(input("b: "))

if (b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif (x>a) and (x<b):
	print(x," pertence ao intervalo",a,",",b)
elif (x<a) or (x>b):
	print(x," nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.110807
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0  nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5  pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
